Revision history for OpenTelemetry

{{$NEXT}}

0.032     2025-11-20 22:38:20 GMT

    * OpenTelemetry::Instrumentation now supports options as array
      references, for instrumentations that require options to be in
      a specific order
    * Added OpenTelemetry::Instrumentation::for_package to allow
      callers to check what instrumentation would be used for a given
      package, if any.
    * Remove experimental OpenTelemetry::Instrumentation::namespace
      from this distribution, so it can be released as an independent
      one.

0.031     2025-08-22 22:30:09 BST

    * Make HTTP::Tiny instrumentation more robust against malformed
      URLs: the code no longer assumes the URLs can be parsed correctly.

0.030     2025-05-07 23:28:24 BST

    * Fixed some minor formatting errors in
      OpenTelemetry::Guides::Instrumentation.
    * The logger used internally now defaults to carping to STDERR at a
      warning level. The log level can be adjusted by setting the
      OTEL_PERL_INTERNAL_LOG_LEVEL environment variable to a suitable
      value. This internal logger is weaker than a regular
      Log::Any::Adapter and can be modified either by setting a
      Log::Any::Adapter or the LOG_ANY_DEFAULT_ADAPTER environment
      variable appropriately. Note that OTEL_PERL_INTERNAL_LOG_LEVEL will
      be ignored if an adapter is manually set.

0.029     2025-04-05 18:00:22+01:00 Europe/London

    * Fix an issue introduced in 0.028 that would cause Perl 5.30
      to interpret some function calls as indirect method calls and
      die.

0.028     2025-04-05 13:42:43+01:00 Europe/London

    * Removed arguments from OpenTelemetry::Context constructors, since
      these could bypass the key validation.
    * The 'set' method for OpenTelemetry::Context now accepts multiple
      pairs, and for consistency the 'delete' method accepts multiple keys.

0.027     2024-12-20 17:31:04+00:00 Europe/London

    * Fixed some minor nits in the documentation