@@ -1,3 +1,0 @@
-package OpenTelemetry::Integration::Local::Only::Legacy;
-
-1;
