@@ -2,6 +2,8 @@ Revision history for OpenTelemetry
 
 {{$NEXT}}
 
+    * Modified instrumentation tests so they pass under coverage.
+
 0.032     2025-11-20 22:38:20 GMT
 
     * OpenTelemetry::Instrumentation now supports options as array
